--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 02:19:00 PM</p>
+    <p class="lastupdate">09/19/2020 02:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">83.6&#176;F</td>
+        <td class="data">84.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">83.6&#176;F</td>
+        <td class="data">84.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">83.6&#176;F</td>
+        <td class="data">84.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.8&#176;F</td>
+        <td class="data">54.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph N (0&#176;)</td>
+        <td class="data">1 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.2&#176;F</td>
+        <td class="data">76.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:07:07 PM">
-            83.9</span><br/>
+          <span title="02:22:41 PM">
+            84.1</span><br/>
           <span title="05:54:36 AM">
             51.4</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:07:07 PM" class="hival">
-            83.9</span>
+          <span title="02:22:41 PM" class="hival">
+            84.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:16:28 AM">
             90</span><br/>
-          <span title="01:59:55 PM">
-            36</span>
+          <span title="02:22:59 PM">
+            35</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:35:01 AM">
             29.972</span><br/>
-          <span title="02:15:01 PM">
-            29.873</span>
+          <span title="02:22:01 PM">
+            29.872</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:10:01 PM">
-            76.2</span><br/>
+          <span title="02:19:01 PM">
+            76.3</span><br/>
           <span title="06:12:00 AM">
             71.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 23 hours, 32 minutes</td>
+      <td class="data">17 days, 23 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 23 hours, 32 minutes</td>
+      <td class="data">17 days, 23 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
