--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 02:34:00 PM</p>
+    <p class="lastupdate">09/19/2020 02:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">85.0&#176;F</td>
+        <td class="data">84.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">85.0&#176;F</td>
+        <td class="data">84.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">85.0&#176;F</td>
+        <td class="data">84.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.5&#176;F</td>
+        <td class="data">53.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">35%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.868 inHg (-0.076)</td>
+        <td class="data">29.865 inHg (-0.078)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph NNE (22&#176;)</td>
+        <td class="data">2 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.4&#176;F</td>
+        <td class="data">76.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:35:01 AM">
             29.972</span><br/>
-          <span title="02:28:01 PM">
-            29.868</span>
+          <span title="02:38:01 PM">
+            29.865</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          354
+          355
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:28:01 PM">
-            76.4</span><br/>
+          <span title="02:36:01 PM">
+            76.5</span><br/>
           <span title="06:12:00 AM">
             71.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 23 hours, 47 minutes</td>
+      <td class="data">17 days, 23 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 23 hours, 47 minutes</td>
+      <td class="data">17 days, 23 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
