--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 02:44:00 PM</p>
+    <p class="lastupdate">09/19/2020 02:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">85.4&#176;F</td>
+        <td class="data">85.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">85.4&#176;F</td>
+        <td class="data">85.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">85.4&#176;F</td>
+        <td class="data">85.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.8&#176;F</td>
+        <td class="data">53.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.858 inHg (-0.085)</td>
+        <td class="data">29.856 inHg (-0.082)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph ESE (112&#176;)</td>
+        <td class="data">1 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.6&#176;F</td>
+        <td class="data">76.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">46%</td>
+        <td class="data">45%</td>
       </tr>
     </tbody>
   </table>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:43:41 PM">
-            85.4</span><br/>
+          <span title="02:45:03 PM">
+            85.5</span><br/>
           <span title="05:54:36 AM">
             51.4</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:43:41 PM" class="hival">
-            85.4</span>
+          <span title="02:45:03 PM" class="hival">
+            85.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:35:01 AM">
             29.972</span><br/>
-          <span title="02:43:01 PM">
-            29.858</span>
+          <span title="02:47:01 PM">
+            29.856</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:42:01 PM">
-            76.6</span><br/>
+          <span title="02:44:01 PM">
+            76.7</span><br/>
           <span title="06:12:00 AM">
             71.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 23 hours, 57 minutes</td>
+      <td class="data">18 days, 0 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 23 hours, 57 minutes</td>
+      <td class="data">18 days, 0 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
